syntax = "proto3";
package copilot.chat;

option go_package = "github.com/yb2020/odoc/proto/gen/go/copilot/chat";

import "definitions/validate/Validate.proto";

// @api_path: /api/copilot/chat/feedbacks
// @method: POST
// @content-type: application/json
// @summary: 反馈 点赞 like, 点踩 dislike, 撤销点赞 null
message ChatFeedbacksRequest {
    //回答id
    string messageId = 1 [(validate.rules).string = {min_len: 1, max_len: 100}];
    //反馈类型
    Rating rating = 2 [(validate.rules).enum.defined_only = true];
}

// 反馈类型
enum Rating {
    LIKE = 0;
    DISLIKE = 1;
    NULL = 2;
}


// @api_path: /api/copilot/chat-messages
// @method: POST
// @content-type: application/json sse
// @summary: 各种提问
message ChatMessagesRequest {
    // 笔记id
    string noteId = 1 [(validate.rules).string = {min_len: 1}];
    // pdfid
    string pdfId = 2 [(validate.rules).string = {min_len: 1}];
    // 模型类型
    string modelType = 3 [(validate.rules).string = {min_len: 1, max_len: 100}];
    // 对话内容
    string content = 4 [(validate.rules).string = {min_len: 0, max_len: 4000}];
    // 对话id 【复用dify的对话id】
    optional string conversationId = 6;
    // taskId, 用于重试
    optional string taskId = 7;
    // 选区文本
    optional SelectedText selectedText = 8;
    // 上传的文件组，目前只支持图片
    repeated UploadFile uploadFiles = 9;
    // 引用信息,用于续写
    optional QuoteInfo quoteInfo = 10;
    // 是否开启回答后的问题推荐，
    optional bool enableQuestionRecommend = 11;
    // 消息id
    optional string id = 12;
}

// 引用信息
message QuoteInfo {
    string messageId = 1;
    // 引用文本
    string quoteContent = 2;
}


// 选区文本
message SelectedText {
    string selectedText = 1;
    int64 selectedPageNum = 2;
    repeated RectOptions selectedBoundingBox = 3;
}

// 上传的文件
message UploadFile{
    string base64 = 1;
    int64 pageNum = 2;
} 


// @api_path: /api/copilot/summary-single-paper
// @method: POST
// @content-type: application/json sse
// @summary: 按照pdf进行总结
// response: ChatMessage
message SummarySinglePaperRequest {
    // 笔记id
    string noteId = 1 [(validate.rules).string = {min_len: 1}];
    // pdfid
    string pdfId = 2 [(validate.rules).string = {min_len: 1}];
}




// @api_path: /api/copilot/chat-messages/stop
// @method: POST
// @content-type: application/json
// @summary: 停止回答
message StopChatMessagesRequest {
    //任务id
    string taskId = 1 [(validate.rules).string = {min_len: 1, max_len: 100}];
}


/**
 *	接口描述:获取对话的历史消息
 *	接口url:/api/copilot/chat/messages
 *	接口请求方式: GET
 *	参数格式:application/json
 */
message GetChatMessagesRequest {
    // pdfid
    string pdfId = 1 [(validate.rules).string = {min_len: 1}];
    //对话id
    optional string conversationId = 2;
    // firstId
    optional string firstId = 3;
    // limit
    optional int32 limit = 4;
}

message GetChatMessagesResponse {
    //是否有更多的消息
    bool hasMore = 1;
    repeated ChatMessageObj data = 2;
    int32 limit = 3;
}

message ChatMessageObj {
    ChatMessagesRequest chatMessageRequest = 1;
    repeated ChatMessage chatMessages = 2;
}

message ChatMessage {
    // 对话id
    string conversationId = 1;
    // 任务id
    string taskId = 2;
    // 消息id
    string messageId = 3;
    //回答内容,当ChatGPT还没返回结果时,该字段可能为空
    optional string answer = 4;
    //创建时间
    int64 createAt = 5;
    //评分
    optional Rating rating = 6;
    //回答的状态
    AnswerStatus answerStatus = 7;
    // 是否可以重试
    bool canRetry = 8;
    //错误信息
    string errorMessage = 9;
    // message files
    repeated MessageFile files = 10;
    // retriever resources 引用和归属分段列表
    repeated RetrieverResource retrieverResources = 11;
    // 回答内容中，是否有后处理的提问，或者上一个回答的相关提问
    repeated string relatedQuestions = 12;
    // 模型类型
    string modelType = 13;
    // 事件类型
    string event = 14;
    // 提问ID
    string requestId = 15;
    // id
    string id = 16;
}

// 文件类型
message MessageFile {
    string id = 1;
    string type = 2;
    string name = 3;
    string url = 4;
}

// retriever resource 引用和归属分段
message RetrieverResource {
    string id = 1;
    string type = 2;
    string name = 3;
    string url = 4;
    string segment = 5;
}

// 回答状态
enum AnswerStatus{
    PENDING = 0;
    SUCCESS = 1;
    ERROR = 2;
}

enum Type{
    QUESTION = 0;
    ANSWER = 1;
}

enum QuestionType{
    SELECT_TEXT = 0;
    ASK_QUESTION = 1;
    IMAGE_QUESTION = 2;
}

// 选区
message RectOptions {
    double x = 1;                           // 锚点横坐标
    double y = 2;                           // 锚点纵坐标
    double width = 3;                       // 选区宽度
    double height = 4;                      // 选区高度
}

// 满意度
enum Satisfaction {
    EXCELLENT = 0;
    GOOD = 1;
    AVERAGE = 2;
    INFERIOR = 3;
    TERRIBLE = 4;
}

// @api_path: /api/copilot/chat/satisfaction/feedback
// @method: POST
// @content-type: application/json
// @summary: 满意度反馈
message ChatSatisfactionFeedbackRequest {
    //回答id
    string messageId = 1 [(validate.rules).string = {min_len: 1, max_len: 100}];
    //满意度
    Satisfaction satisfaction = 2;
}


/**
 *	接口描述:换个答案
 *	接口url:/answer/change
 *	接口请求方式: GET
 *	参数格式:url参数
 */
message ChangeAnswerRequest {
  // 字段同上
  string lang = 1;
  string questionId = 2;
  // 用于追问场景,表示针对某个答案再做提问
  optional string answerId = 3[(validate.rules).string = {min_len: 1}];
  // 是否属于要优化的内容
  optional string optimizeId = 4[(validate.rules).string = {min_len: 1}];
}

message ChangeAnswerResponse {
  AnswerInfo answer = 1;
}

message AnswerInfo {
  int64 id = 1;
  //回答内容,当ChatGPT还没返回结果时,该字段可能为空
  optional string answer = 2;

  int64 createDate = 3;
  //是否点赞
  bool isLike = 4;
  //是否点踩
  bool isDisLike = 5;
  //回答的状态
  AnswerStatus answerStatus = 6;
  // 是否可以重试
  bool canRetry = 7;
  string errorMessage = 8;
  // 回答内容中，是否有后处理的提问
  repeated string hanleProcessedQuestion = 9;

  optional bool showSatisfactionFeedback = 10;

  //是否是优化后的结果
  optional bool isOptimized = 11;

  //优化后的结果反馈
  optional string optimizedFeedbackResult = 12;

  //是否已退豆
  optional bool isRefundAiBean = 13;

  //数据创建时间
  uint64 createTime = 14;

  //是否需要退豆
  optional bool needRefundAiBean = 15;

}