syntax = "proto3";

package oss;


option go_package = "github.com/yb2020/odoc-proto/gen/go/oss";

// OSS存储桶枚举
enum OSSBucketEnum {
    PDF = 0;
    FULL_TRANSLATE_PDF = 1;
    PUBLIC = 2;
    TEMP = 3;
}

//OSS存储桶key策略
enum OSSKeyPolicyEnum {
    //默认策略
    DEFAULT = 0;
    // 上传pdf策略
    UPLOAD_PDF = 1;
    // 上传公共桶的短链接策略
    UPLOAD_PUBLIC_SHORT = 2;
    
}

//上传文件的类型
enum UploadFileType {
    // 文件流上传
    FILE_STREAM = 0;
    // 本地文件上传
    LOCAL_FILE = 1;
}


// @api_path: /userDoc/GetUploadToken
// @method: GET
// @content-type: application/json
// @summary: 获取minio上传token【需要使用服务token才能访问】
message GetUploadTokenRequest {
    UploadFileType fileType = 1;
    string fileSHA256 = 2;        // 文件fileSHA256
    uint64 fileSize = 3;
    string fileName = 4;   // 文件名
    uint64 filePage = 5;   // 文件页数
    string folderId = 6;   // 文件夹ID
    OSSBucketEnum bucketEnum = 7;      // bucket
    map<string, string> bizMetadata = 8; // 业务元数据
    optional string callbackTopic = 9; // 回调主题
    OSSKeyPolicyEnum keyPolicy = 10; //key策略
    //如果是本地文件上传，则需要提供本地文件路径
    string localFilePath = 11; // 本地文件路径
}

message GetUploadTokenResponse {
    //是否需要上传
    bool needUpload = 1;
    //上传信息
    UploadS3Info uploadInfo = 2;
    //oss记录
    OSSS3Info ossInfo = 3;
    //
    string publicUrl = 4;
    // 上传文件的类型
    UploadFileType fileType = 5;
}


message UploadS3Info {
    // 上传URL
    string url = 1; 
    // HTTP方法       
    string method = 2;  
    // HTTP头   
    map<string, string> headers = 3; 
}

message OSSS3Info {
    // 存储桶名称
    string bucketName = 1; 
    // 对象键（文件路径）
    string objectKey = 2; 
    // 原始文件名
    string fileName = 3; 
    // 文件大小（字节）
    string fileSize = 4; 
    // 文件hash值（sha256）
    string fileSHA256 = 5; 
}


// @api_path: /services/oss/s3/getDownloadTeamUrl
// @method: GET
// @content-type: application/json
// @summary: 获取minio解析文件的下载地址
message GetS3DownloadTempUrlReq{
    // 文件fileSHA256
    string fileSHA256 = 1;
    // pdf文件Id
    string pdfId = 2;
    // 文献id
    string userDocId = 3;
    // 文件id
    string paperId = 4;
    // 数据类型
    ParsedDataEnum dataType = 5;
    // version
    string version = 6;
}


message GetS3DownloadTempUrlResp{
    // 文件fileSHA256
    string fileSHA256 = 1;
    //文件临时访问或者下载地址
    string downloadTempUrl = 2;
}



// 解析数据存储类型
enum ParsedDataEnum {
    // 元数据文件类型
    METADATA = 0;
    // 段落文件类型
    PARAGRAPHS = 1;
    // 全文文件类型
    FULLTEXT = 2;
    // 图片和表格文件类型
    FIGURE_AND_TABLE = 3;
    // markdown文件类型
    MARKDOWN = 4;
    // 页面块文件类型
    PAGE_BLOCK = 5;
}


